# microshipTechnicalAssessmentUserAuthApp

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/controller/: usercontroller.py
src/data/model/: user.py
src/data/repository/: userinterface.py  userrespository.py
src/dto/request/: loginrequest.py  registrationrequest.py
src/dto/response/: profileresponse.py  registrationresponse.py
src/exceptions/: exception.py
src/service/passwordsecurity/: passwordencrypt.py
src/service/userservices/: userservice.py
